# budsmokers-api

./: Cargo.toml
products/src/: handlers.rs
src/: main.rs
users/: Cargo.toml
users/migrations/2021-11-07-215543_create_users/: up.sql
users/src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs
users/templates/: register.html
