[package]
name = "users"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4.1", features = ["postgres"] }
dotenv = "0.15.0"
handlebars = { version = "3.0.1", features = ["dir_source"] }
r2d2 = "*"
serde = "1.0.130"
serde_json = "1"
sha-crypt = "0.3.1"
uuid = { version = "0.8.2", features = ["serde"] }
